--- a/back/src/locales/en/validation.json
+++ b/back/src/locales/en/validation.json
@@ -1,18 +1,20 @@
 {
-  "summary": "Invalid input data. Please check the errors for details.",
-  "genericInvalid": "{{field}} is not a valid value.",
-  "required": "{{field}} is a required field.",
-  "emailInUse": "This email address is already in use.",
-  "invalidEmail": "Invalid email format.",
-  "nameTooShort": "Name must be at least {{count}} characters long.",
-  "passwordTooShort": "Password must be at least {{count}} characters long.",
-  "tooShort": "{{field}} must be at least {{count}} characters long.",
-  "db": {
-    "invalidData": "Invalid database input: {{details}}",
-    "invalidId": "Invalid {{value}} for {{kind}}"
+  "email": {
+    "required": "Email is required.",
+    "invalid": "Please enter a valid email address.",
+    "inUse": "This email address is already in use."
   },
-  "duplicate": {
-    "default": "The field '{{field}}' with value '{{value}}' already exists.",
-    "unknown": "A resource with this value already exists."
-  }
+  "name": {
+    "required": "Name is required.",
+    "length": "Name must be at least {{count}} characters long."
+  },
+  "password": {
+    "required": "Password is required.",
+    "length": "Password must be at least {{count}} characters long."
+  },
+  "token": {
+    "required": "Token is required.",
+    "empty": "Token cannot be empty."
+  },
+  "default": "Invalid data format. See details below..."
 }
