--- a/back/src/locales/en/auth.json
+++ b/back/src/locales/en/auth.json
@@ -1,5 +1,18 @@
 {
   "register": {
-    "success": "User registered successfully."
+    "success": "User registered successfully. Please check your email to verify your account.",
+    "errors": {
+      "postRegistrationTaskFailed": "A post-registration task failed: {{errorName}}."
+    }
+  },
+  "verify": {
+    "success": "Email verified successfully. You can now log in.",
+    "alreadyVerified": "Your email address has already been verified.",
+    "invalidToken": "The verification link is invalid or has expired.",
+    "userNotFound": "User not found. The verification link may be associated with a deleted account."
+  },
+  "logs": {
+    "orchestratingVerification": "Creating verification token and sending email.",
+    "verifySuccess": "User email verified successfully."
   }
 }
