--- a/back/src/locales/en/queue.json
+++ b/back/src/locales/en/queue.json
@@ -1,5 +1,7 @@
 {
-  "queueError": "Email queue error",
-  "addingJob": "Adding job to emailQueue",
-  "addJobFailed": "Failed to add job to emailQueue"
+  "addingJob": "Adding new job to the queue.",
+  "queueError": "An error occurred in the queue.",
+  "errors": {
+    "jobCreationFailed": "Failed to create a new job in the queue."
+  }
 }
