feat: Enhance logging, Redis retry, and worker robustness
This commit improves logging, Redis connection stability, graceful shutdown, and worker robustness.
Key changes include:
- Enhanced Redis retry logic with configurable retries and .
- Implemented graceful shutdown delay () for critical failures.
- Improved error handling for Redis connection failures in app-bootstrap and worker.
- Optimized logger initialization using lazy loading to ensure correct log levels.
- Streamlined worker startup process and fixed syntax errors.
- Updated  to reflect all changes.

--- a/packages/config/src/locales/en/worker.json
+++ b/packages/config/src/locales/en/worker.json
@@ -1,15 +1,20 @@
 {
   "logs": {
     "starting": "Starting email worker process...",
-    "ready": "Email worker is ready and listening for jobs.",
-    "processing": "Processing job.",
+    "ready": "Email processor is ready for jobs.",
+    "processing": "Processing job...",
     "dispatchingEmail": "Dispatching verification email",
     "emailSentSuccess": "Verification email sent successfully.",
     "completed": "Job completed.",
-    "failed": "Job failed"
+    "failed": "Job failed.",
+    "jobStarted": "Job started.",
+    "sendingVerificationEmail": "Sending verification email.",
+    "verificationEmailSent": "Verification email sent."
   },
   "errors": {
     "jobDataMissingFields": "Job data is missing required fields.",
-    "unknownJobType": "Unknown job type received: {{type}}."
+    "unknownJobType": "Unknown job type received: {{type}}.",
+    "jobFailed": "Job processing failed.",
+    "startupFailed": "Email worker startup failed."
   }
 }
