tests-lints fixed

--- a/packages/config/src/locales/en/auth.json
+++ b/packages/config/src/locales/en/auth.json
@@ -13,6 +13,11 @@
   },
   "logs": {
     "orchestratingVerification": "Creating verification token and sending email.",
-    "verifySuccess": "User email verified successfully."
+    "verifySuccess": "User email verified successfully.",
+    "redisKeyConstructed": "Constructed Redis key for verification token.",
+    "tokenNotFoundRedis": "Verification token not found in Redis.",
+    "tokenFoundRedis": "Found verification token in Redis.",
+    "userFromTokenNotFound": "User from token not found in database.",
+    "userAlreadyVerified": "User is already verified."
   }
 }
