feat: Add Redis key creation functions and improve email verification error handling

--- a/packages/config/src/locales/en/auth.json
+++ b/packages/config/src/locales/en/auth.json
@@ -2,7 +2,8 @@
   "register": {
     "success": "User registered successfully. Please check your email to verify your account.",
     "errors": {
-      "postRegistrationTaskFailed": "A post-registration task failed: {{errorName}}."
+      "postRegistrationTaskFailed": "A post-registration task failed: {{errorName}}.",
+      "invalidDataFormat": "Invalid data format encountered during verification."
     }
   },
   "verify": {
