feat: Enhance error handling for duplicate key registration and add environment-specific configurations

--- a/packages/config/src/locales/en/auth.json
+++ b/packages/config/src/locales/en/auth.json
@@ -3,7 +3,8 @@
     "success": "User registered successfully. Please check your email to verify your account.",
     "errors": {
       "postRegistrationTaskFailed": "A post-registration task failed: {{errorName}}.",
-      "invalidDataFormat": "Invalid data format encountered during verification."
+      "invalidDataFormat": "Invalid data format encountered during verification.",
+      "duplicateKey": "Duplicate key value error."
     }
   },
   "verify": {
