feat: Introduce `sendVerificationEmail` method, update email consumer to utilize it, and refine i18n configurations.

--- a/packages/config/locales/en/auth.missing.json
+++ b/packages/config/locales/en/auth.missing.json
@@ -1,5 +1,8 @@
 {
   "register": {
     "success": "register.success"
+  },
+  "logs": {
+    "registerDuplicateKey": "logs.registerDuplicateKey"
   }
 }
